fixed accordion and placeholder not showing in safari

--- a/src/assets/scss/templates/_projects.scss
+++ b/src/assets/scss/templates/_projects.scss
@@ -52,7 +52,7 @@
         a{
           color: $opaque-color;
           font-size: 18px;
-          font-family:$main-font;
+          // font-family:$main-font;
           @media (max-width: 40em){
             font-size: 14px;
           }
@@ -124,16 +124,16 @@
          opacity: 0.3;
          &:active{
               opacity: 1;
-            }  
+            }
          i{
            color: $title-color;
            font-size: 20px;
            margin-bottom: 10px;
           }
          p{
-            display: inline; 
+            display: inline;
             margin-left: 10px;
-         }        
+         }
         }
         @media (max-width: 64em){
           display: none;
@@ -156,7 +156,7 @@
     @media (max-width: 64em){
       width: 100%;
       margin-top: 25%;
-    }     
+    }
   }
   footer{
     display: none;
@@ -207,7 +207,7 @@
           border: 2px solid;
           width: 100%;
           padding: 0;
-          min-height: 170px; 
+          min-height: 170px;
         &__text{
           display: none;
           }
@@ -258,13 +258,13 @@
             width: 50%;
             padding-top: 0;
             margin-top: 0;
-            margin-left: 32%; 
+            margin-left: 32%;
             @media (max-width: 60em){
               width: 60%;
               left: 30%;
               margin-left: 0;
             }
-          } 
+          }
         }
       }
         @media (max-width: 60em){
@@ -286,7 +286,7 @@
           left: 20%;
         }
         @media (width: 320px){
-          width: 252px; 
+          width: 252px;
           left: 30%;
         }
       }
@@ -313,7 +313,7 @@
       &__box{
         position: relative;
         float: right;
-        width: 50%;    
+        width: 50%;
         height: fit-content;
         padding: 30px;
         padding-left: 80px;
@@ -376,7 +376,7 @@
     display: none;
   }
 
-///// 
+/////
 .accordion-title:hover, .accordion-title:focus {
     background-color: #e6e6e600;
 }
@@ -403,7 +403,7 @@
     font-family: $bold-font;
     color: $title-color;
     font-size: 45px;
-    
+
 }
 
 .show-filter{
@@ -430,5 +430,5 @@
 {
   border-radius: 20px;
   -webkit-box-shadow: inset 0 0 px #ad1457 ;
-  background-color:#643f91; 
+  background-color:#643f91;
 }
