--- a/src/assets/scss/templates/blogs.scss
+++ b/src/assets/scss/templates/blogs.scss
@@ -424,13 +424,13 @@
         border-bottom: 1px solid #e6e6e6;
         transition: border-bottom-color 0.3s linear;
 
-        // &::placeholder{
-        //   color: $title-color;
-        //   letter-spacing: 0px;
-        //   font-family: $din-bold;
-        //   font-size: 1.7rem;
-        //   padding: 0 0.5rem;
-        // }
+        &::placeholder{
+          color: $title-color;
+          letter-spacing: 1px;
+          font-family: $title-font;
+          font-size: 1.7rem;
+            line-height: 1.2;
+        }
         &:focus{
           border-bottom-color: $title-color;
           &::placeholder{
@@ -440,7 +440,7 @@
       }
       & .search-button{
         margin-left: -2em;
-        margin-top: -1.2em;
+        margin-top: -1em;
       & img{
           width: 60%;
         }
@@ -449,8 +449,9 @@
     & li.accordion-item
     {
       & a{
-        font-family: $main-font;
+        // font-family: $main-font;
         font-size: 1.5rem;
+        // color: #aaaa;
       }
     }
     & .filter-menu{
@@ -463,10 +464,10 @@
       & .accordion{
 
         & .accordion-item{
-          font-family: 'DIN-Regular';
+          // font-family: 'DIN-Regular';
           color: #aaaa;
           & .accordion-content{
-            font-family: $main-font;
+            // font-family: $main-font;
             color: #aaaa;
           }
         }
