--- a/src/assets/scss/templates/search.scss
+++ b/src/assets/scss/templates/search.scss
@@ -30,6 +30,7 @@ body.search{
           letter-spacing: 1px;
           font-family: $title-font;
           font-size: 1.7rem;
+            line-height: 1.2;
         }
         &:focus{
           border-bottom-color: $title-color;
@@ -42,7 +43,7 @@ body.search{
         margin-left: -2em;
         margin-top: -1em;
       & img{
-          width: 90%;
+          width: 60%;
         }
       }
     }
@@ -54,7 +55,7 @@ body.search{
       letter-spacing: 2px;
     }
     & a{
-      font-family: 'DIN-Regular';
+      // font-family: 'DIN-Regular';
     }
   }
 }
@@ -965,7 +966,8 @@ body.search{
               // width: 45%;
               & input::placeholder{
                 font-size: 1.4rem;
-                font-family: $din-bold;
+                // font-family: $din-bold;
+                  font-family: 'DINCondensed-Bold';
               }
               & .search-button{
                 margin-top: -1.5em;
@@ -982,15 +984,19 @@ body.search{
               flex: 1;
               padding: 0 1em;
               padding: 0.5em 1em;
+              border-bottom: none;
+
                   & .accordion-outer{
                     & .accordion-title{
                       padding: 1rem 1rem;
+                          font-size: 1.2rem;
                     }
                   }
               & .accordion-title{
                 border-top: none;
                 color: $title-color;
-                font-family: $din-bold;
+                // font-family: $din-bold;
+                  font-family: 'DINCondensed-Bold';
                 &:focus{
                   background-color: transparent;
                 }
@@ -1268,7 +1274,8 @@ body.search{
                   // width: 45%;
                   & input::placeholder{
                     font-size: 1.4rem;
-                    font-family: $din-bold;
+                    // font-family: $din-bold;
+                    font-family: 'DINCondensed-Bold';
                   }
                   & .search-button{
                     margin-top: -1.5em;
@@ -1286,6 +1293,7 @@ body.search{
                   display: block;
                   display: block;
                   flex: 1;
+                  border-bottom: none;
                 }
                 & .filter-menu{
 
@@ -1299,8 +1307,9 @@ body.search{
                       border-top: none;
 
                       color: $title-color;
-                      font-family: $din-bold;
-                      font-size: 1.4rem;
+                      //font-family: $din-bold;
+                      font-family: 'DINCondensed-Bold';
+                      font-size: 1.2rem;
                       line-height: 0.4;
                       display: flex;
                       justify-content: space-between;
